<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbManana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/txt_turno_manana"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RadioButton
                    android:id="@+id/rbTarde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_turno_tarde"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/cbADA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/txt_ADA"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <CheckBox
                android:id="@+id/cbPMDM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_PMDM"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <CheckBox
                android:id="@+id/cbPSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_PSP"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <CheckBox
                android:id="@+id/cbFOL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_FOL"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/btn_matricula" />

            <TextView
                android:id="@+id/tvResumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:text="@string/txt_resultado" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>